--- a/src/styles/themes/proton/sidebar/sidebar.styl
+++ b/src/styles/themes/proton/sidebar/sidebar.styl
@@ -78,7 +78,7 @@ body
   width: 100%
   height: 100%
   flex-direction: column
-  overflow: hidden
+  overflow: clip
   background-color: var(--frame-bg)
   flex-direction: column
   // padding-top: var(--s-top-padding, 0px)
